tests/ui/unboxed-closures/issue-30906.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-30906.rs:18:5
   |
LL |     test(Compose(f, |_| {}));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(&'0 str) -> T` must implement `FnOnce<(&'1 str,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&str,)>`

error: aborting due to 1 previous error

